--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <table>
         <thead>
             <tr>
-                <th>Produto</th>
+                <th>Produtos</th>
                 <th>Quantidade</th>
                 <th>Preço</th>
                 <th>Black Friday</th>
