quantidade para quantidades

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <thead>
             <tr>
                 <th>Produto</th>
-                <th>Quantidade</th>
+                <th>Quantidades</th>
                 <th>Preço</th>
                 <th>Black Friday</th>
             </tr>
